--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "gulp": "^3.8.11",
     "gulp-sass": "^2.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "http-server": "^0.8.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"start": "./run.sh"
   },
   "repository": {
     "type": "git",
