--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "dependencies": {
     "bower": "^1.4.1",
     "gulp": "^3.8.11",
-    "gulp-sass": "^2.0.1"
-  },
-  "devDependencies": {
-    "http-server": "^0.8.0"
+    "gulp-sass": "^2.0.1",
+    "http-server": "^0.8.0",
+    "mongodb": "^2.0.31",
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "express": "~4.12.2",
+    "jade": "*",
+    "morgan": "~1.5.1",
+    "serve-favicon": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"start": "./run.sh"
+    "start": "./run.sh"
   },
   "repository": {
     "type": "git",
@@ -24,5 +30,8 @@
   "bugs": {
     "url": "https://github.com/matifol/facilitate/issues"
   },
-  "homepage": "https://github.com/matifol/facilitate"
+  "homepage": "https://github.com/matifol/facilitate",
+  "devDependencies": {
+    "mongoose": "^4.0.3"
+  }
 }
