--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "bower": "^1.4.1",
     "gulp": "^3.8.11",
-    "gulp-sass": "^2.0.1"
+    "gulp-sass": "^2.0.1",
+    "gulp-watch": "^4.2.4"
   },
   "devDependencies": {},
   "scripts": {
