Replaced application structure with angular

--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "FacilityManagement",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "~1.12.0",
     "bower": "^1.4.1",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "event-stream": "^3.3.1",
+    "express": "~4.12.2",
     "gulp": "^3.8.11",
+    "gulp-copy": "0.0.2",
+    "gulp-htmlbuild": "^0.4.1",
     "gulp-sass": "^2.0.1",
     "gulp-watch": "^4.2.4",
     "http-server": "^0.8.0",
-    "mongodb": "^2.0.31",
-    "body-parser": "~1.12.0",
-    "cookie-parser": "~1.3.4",
-    "debug": "~2.1.1",
-    "express": "~4.12.2",
     "jade": "*",
+    "mongodb": "^2.0.31",
     "morgan": "~1.5.1",
     "serve-favicon": "*"
   },
