--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
   ],
   "dependencies": {
     "foundation": "~5.5.2",
-    "react": "~0.13.3"
+    "react": "~0.13.3",
+    "angular": "~1.3.15",
+    "angular-route": "~1.3.15"
   }
 }
